Added TS (Touch Sensor) component to the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,12 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+
+# Set custom component directories
+set(EXTRA_COMPONENT_DIRS "TS")
+
+# Add IDF specific environment
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+# Set projekt name
 project(smart_vibrator)
