Added Pulse Oximeter and Heart-Rate Sensor MAX30102 into device drivers. (#18)

--- a/DD/CMakeLists.txt
+++ b/DD/CMakeLists.txt
@@ -19,8 +19,11 @@
 # *********************************************************************/
 
 idf_component_register(SRCS "Config/dd_icm-20600_Cfg.c"
+                            "Config/dd_max-30102_Cfg.c"
                             "Core/dd_database.c"
                             "Core/dd_icm-20600.c"
+                            "Core/dd_max-30102.c"
                             "Interface/dd_icm-20600_oif.c"
+                            "Interface/dd_max-30102_oif.c"
                             "DD.c"
                        INCLUDE_DIRS ".")
