Added missing directories + files
Added missing directories + files that have been missed during conversion from SVN to Git.

--- a/TS/CMakeLists.txt
+++ b/TS/CMakeLists.txt
@@ -1,10 +1,7 @@
 # *********************************************************************
 #   MODULE SPECIFICATION:
 #
-#       $URL$
-#       $Revision$
-#       $Author$
-#       $Date$
+#        File: CMakeList for module TS
 #
 #       SEWELA owns the copyright in this document and associated
 #       documents and all rights are reserved. These documents must
