--- a/.project
+++ b/.project
@@ -15,6 +15,6 @@
 	<natures>
 		<nature>org.eclipse.cdt.core.cnature</nature>
 		<nature>org.eclipse.cdt.core.ccnature</nature>
-		<nature>org.eclipse.cdt.cmake.core.cmakeNature</nature>
+		<nature>com.espressif.idf.core.idfNature</nature>
 	</natures>
 </projectDescription>
