--- a/DD/CMakeLists.txt
+++ b/DD/CMakeLists.txt
@@ -16,13 +16,16 @@ idf_component_register(SRCS "Config/dd_icm-20600_Cfg.c"
                             "Config/dd_max-30102_Cfg.c"
                             "Config/dd_xr-18910_Cfg.c"
                             "Config/dd_i2c_Cfg.c"
+                            "Config/dd_sd_Cfg.c"
                             "Core/dd_database.c"
                             "Core/dd_icm-20600.c"
                             "Core/dd_max-30102.c"
                             "Core/dd_xr-18910.c"
                             "Core/dd_i2c.c"
+                            "Core/dd_sd.c"
                             "Interface/dd_icm-20600_interface.c"
                             "Interface/dd_max-30102_interface.c"
                             "Interface/dd_xr-18910_interface.c"
+                            "Interface/dd_sd_interface.c"
                             "DD.c"
                        INCLUDE_DIRS ".")
