[SIM] Updated simulator configuration

--- a/020_Test/010_Gogeta/Smart_Vibrator/BLFLoader.config
+++ b/020_Test/010_Gogeta/Smart_Vibrator/BLFLoader.config
@@ -2,7 +2,7 @@
     {
         "can_channel": 1,
         "clear_signal_memory": false,
-        "dbc_file": "DLG.dbc",
+        "dbc_file": "../DBCs/DLG.dbc",
         "prot_type": "MASTER",
         "sync_msg_id": 20,
         "sync_mux_id": 0
