[DD, DLG] Added logging structure for ICM_20600

--- a/010_Main_Application/CMakeLists.txt
+++ b/010_Main_Application/CMakeLists.txt
@@ -17,11 +17,11 @@ cmake_minimum_required(VERSION 3.5)
 
 
 # Set custom component directories
-set(EXTRA_COMPONENT_DIRS "TS"
+set(EXTRA_COMPONENT_DIRS "DLG"
+                         "TS"
                          "DD"
                          "SENSE"
-                         "VE"
-                         "DLG" )
+                         "VE")
 
 # Add IDF specific environment
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
