[SIM] Updated CANalyzer config

--- a/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
+++ b/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
@@ -1,4 +1,4 @@
-;CANalyzer Version |4|10|0|37616 DLG 
+;CANalyzer Version |4|10|0|53989 DLG 
 Version: 10.0.114 Build 114
 32 PRO
 0
@@ -9,7 +9,7 @@ VGlobalParameters 2 Begin_Of_Object
 4
 5,50000,1000,60000,5000,10000
 1000000
-1 1
+0 1
 ResetSignalsOnMeasurementStart=1
 VDatabaseContainerStreamer 3 Begin_Of_Object
 8
@@ -518,12 +518,12 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 1
 2000
-218
+268
 0
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-266
+316
 0
 0
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -1219,7 +1219,7 @@ End_Of_Object VTNColumnData 16
 VTNColumnData 16 Begin_Of_Object
 3
 3
-89
+216
 4
 Name
 1
@@ -2409,7 +2409,7 @@ End_Of_Object VTraceColumnConfiguration 15
 0
 VTraceControlFixedModeExpansionItems 15 Begin_Of_Object
 3
-14
+18
 VConfigError 16 Begin_Of_Object
 1
 VConfigBusEvent 17 Begin_Of_Object
@@ -2737,40 +2737,6 @@ VConfigBusEvent 18 Begin_Of_Object
 VConfigEvent 19 Begin_Of_Object
 1
 End_Of_Object VConfigEvent 19
-2
-1
-End_Of_Object VConfigBusEvent 18
-End_Of_Object VConfigBusObject 17
-9
-1
-VDatabaseBusMessageId 17 Begin_Of_Object
-3
-2565865743
-2
-1
-0
-0
-0
-
-0
-
-0
-1
-End_Of_Object VDatabaseBusMessageId 17
-NULL
-0
-0
-0
-End_Of_Object VConfigMessage 16
-VConfigMessage 16 Begin_Of_Object
-5
-VConfigBusObject 17 Begin_Of_Object
-1
-VConfigBusEvent 18 Begin_Of_Object
-1
-VConfigEvent 19 Begin_Of_Object
-1
-End_Of_Object VConfigEvent 19
 1
 1
 End_Of_Object VConfigBusEvent 18
@@ -2847,6 +2813,108 @@ End_Of_Object VConfigBusObject 17
 1
 VDatabaseBusMessageId 17 Begin_Of_Object
 3
+23
+1
+1
+0
+0
+0
+DD_ICM_20600_selt_test
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
+VConfigMessage 16 Begin_Of_Object
+5
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+3
+24
+1
+1
+0
+0
+0
+DD_ICM_20600_accl_fac_trim
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
+VConfigMessage 16 Begin_Of_Object
+5
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+3
+25
+1
+1
+0
+0
+0
+DD_ICM_20600_accl_fac_trim_dev
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
+VConfigMessage 16 Begin_Of_Object
+5
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+3
 26
 1
 1
@@ -2864,6 +2932,78 @@ NULL
 0
 0
 End_Of_Object VConfigMessage 16
+VConfigMessage 16 Begin_Of_Object
+5
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+3
+28
+1
+1
+0
+0
+0
+DD_ICM_20600_gyro_fac_trim
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
+VConfigMessage 16 Begin_Of_Object
+5
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+3
+29
+1
+1
+0
+0
+0
+DD_ICM_20600_gyro_fac_trim_dev
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
+0
+0
+0
+0
 0
 0
 0
@@ -2972,7 +3112,7 @@ END_OF_DOCK_INFO
 1916 916
 END_OF_DESKTOP_DATA
 6
-2 3 -1 -1 -1 -1 0 0 886 537
+2 3 -1 -1 -8 -31 0 0 886 537
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -3084,7 +3224,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 1
@@ -3316,7 +3456,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_is_calibrated
-"" 159 c0c0c0 -1.4505531 -0.33568025 -100. 100. 1 0 0 1 576000000 1 1 0 0
+"" 159 c0c0c0 -1. 1. -100. 100. 1 0 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3397,7 +3537,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_self_test_passed
-"" 159 ffffff -5.071116 2.2918675 -100. 100. 1 0 0 1 576000000 1 1 0 0
+"" 159 ffffff 0. 2. -100. 100. 1 0 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3478,7 +3618,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_chip_id
-"" 159 99ff 111.79336 116.0066 -100. 100. 1 0 0 0 576000000 1 1 0 0
+"" 159 99ff 114. 116. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3559,7 +3699,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_device_state
-"" 159 cc99ff -29.804577 92.889275 -100. 100. 20 0 0 1 576000000 1 1 0 0
+"" 159 cc99ff 2. 4. -100. 100. 1 0 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3640,7 +3780,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_temperature_raw
-"" 159 ffffcc -431.79742 3849.6379 -100. 100. 5000 0 0 0 576000000 1 1 0 0
+"" 159 ffffcc -76.069356 1927.6354 -100. 100. 200 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3721,7 +3861,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_temperature_deg
-"deg" 1 cc99 -11.964166 32.088078 -100. 100. 50 0 0 0 576000000 1 1 0 0
+"deg" 1 cc99 -49.598391 34.624265 -100. 100. 10 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3802,7 +3942,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_x
-"" 159 ff00ff -49347.316 111983.73 -100. 100. 5000 0 0 0 576000000 1 1 0 0
+"" 159 ff00ff 0. 15260. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3883,7 +4023,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_y
-"" 159 ffff 0. 65316. -100. 100. 2000 0 0 0 576000000 1 1 0 0
+"" 159 ffff 0. 13232. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3964,7 +4104,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_z
-"" 159 ff00 0. 65512. -100. 100. 2000 0 0 0 576000000 1 1 0 0
+"" 159 ff00 0. 32767. -100. 100. 10000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4045,7 +4185,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_x
-"" 159 ff 0. 65357. -100. 100. 100000 0 0 0 576000000 1 1 0 0
+"" 159 ff 0. 6140. -100. 100. 2000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4126,7 +4266,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_y
-"" 159 ff6633 0. 65444. -100. 100. 100000 0 0 0 576000000 1 1 0 0
+"" 159 ff6633 0. 6621. -100. 100. 2000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4207,7 +4347,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_z
-"" 159 ffff00 0. 64791. -100. 100. 100000 0 0 0 576000000 1 1 0 0
+"" 159 ffff00 0. 10430. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4257,7 +4397,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 DLG
 0
@@ -4279,7 +4419,7 @@ CAN1
 DLG
 DLG
 25
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4288,7 +4428,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_xa
-"" 1 ccffcc -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 ccffcc 59.948378 64.340651 -100. 100. 0.2 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4332,13 +4472,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-25
+29
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_gyro_fac_trim_dev
 0
 DLG
 0
@@ -4359,8 +4499,8 @@ DD_ICM_20600_factory_trim_dev_xg
 CAN1
 DLG
 DLG
-25
-DD_ICM_20600_factory_trim_dev
+29
+DD_ICM_20600_gyro_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4369,7 +4509,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_xg
-"" 1 ccff -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 ccff 4.2177216 4.9081259 -100. 100. 0.05 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4419,7 +4559,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 DLG
 0
@@ -4441,7 +4581,7 @@ CAN1
 DLG
 DLG
 25
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4450,7 +4590,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_ya
-"" 1 ffcc00 -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 ffcc00 63.599646 72.579582 -100. 100. 5 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4494,13 +4634,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-25
+29
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_gyro_fac_trim_dev
 0
 DLG
 0
@@ -4521,8 +4661,8 @@ DD_ICM_20600_factory_trim_dev_yg
 CAN1
 DLG
 DLG
-25
-DD_ICM_20600_factory_trim_dev
+29
+DD_ICM_20600_gyro_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4531,7 +4671,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_yg
-"" 1 969696 -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 969696 -11.678325 -7.4355491 -100. 100. 0.2 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4581,7 +4721,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 DLG
 0
@@ -4603,7 +4743,7 @@ CAN1
 DLG
 DLG
 25
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_accl_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4612,7 +4752,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_za
-"" 1 66ff -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 66ff 61.416049 71.932209 -100. 100. 0.5 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4656,13 +4796,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-25
+29
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim_dev
+DD_ICM_20600_gyro_fac_trim_dev
 0
 DLG
 0
@@ -4683,8 +4823,8 @@ DD_ICM_20600_factory_trim_dev_zg
 CAN1
 DLG
 DLG
-25
-DD_ICM_20600_factory_trim_dev
+29
+DD_ICM_20600_gyro_fac_trim_dev
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4693,7 +4833,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_zg
-"" 1 cccc33 -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 1 cccc33 -3.0245882 1.9040439 -100. 100. 5 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4743,7 +4883,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 DLG
 0
@@ -4765,7 +4905,7 @@ CAN1
 DLG
 DLG
 24
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4774,7 +4914,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_xa
-"" 1 ff99cc -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ff99cc 2070.7215 2076.5421 -100. 100. 5 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4818,13 +4958,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-24
+28
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_gyro_fac_trim
 0
 DLG
 0
@@ -4845,8 +4985,8 @@ DD_ICM_20600_factory_trim_xg
 CAN1
 DLG
 DLG
-24
-DD_ICM_20600_factory_trim
+28
+DD_ICM_20600_gyro_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4855,7 +4995,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_xg
-"" 1 ffcc99 -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ffcc99 3424. 3426. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4905,7 +5045,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 DLG
 0
@@ -4927,7 +5067,7 @@ CAN1
 DLG
 DLG
 24
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -4936,7 +5076,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_ya
-"" 1 ff00ff -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ff00ff 2142. 2144. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4980,13 +5120,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-24
+28
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_gyro_fac_trim
 0
 DLG
 0
@@ -5007,8 +5147,8 @@ DD_ICM_20600_factory_trim_yg
 CAN1
 DLG
 DLG
-24
-DD_ICM_20600_factory_trim
+28
+DD_ICM_20600_gyro_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -5017,7 +5157,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_yg
-"" 1 ffff -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ffff -3749. -3747. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5067,7 +5207,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 DLG
 0
@@ -5089,7 +5229,7 @@ CAN1
 DLG
 DLG
 24
-DD_ICM_20600_factory_trim
+DD_ICM_20600_accl_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -5098,7 +5238,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_za
-"" 1 ff00 -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ff00 2215. 2217. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5142,13 +5282,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-24
+28
 1
 1
 0
 0
 0
-DD_ICM_20600_factory_trim
+DD_ICM_20600_gyro_fac_trim
 0
 DLG
 0
@@ -5169,8 +5309,8 @@ DD_ICM_20600_factory_trim_zg
 CAN1
 DLG
 DLG
-24
-DD_ICM_20600_factory_trim
+28
+DD_ICM_20600_gyro_fac_trim
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -5179,9 +5319,9 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_zg
-"" 1 ff -5.12 5.11 -100. 100. 20 0 0 0 576000000 1 1 0 0
+"" 223 ff 9636. 9638. -100. 100. 1 0 0 0 576000000 1 1 0 0
 [GraphWindow:x_x_x_x_x_x_WindowBk_Grid_AxisBk_XAxisFr_YAxisFr_x_x_x_x_x_x]
-0 1000930434.7826 1000930434.7826 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
+0 499962.35545999999 1000930.26584 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
 0 30 5000
 0
 0 100
@@ -5192,7 +5332,7 @@ DD_ICM_20600_factory_trim_zg
 0
 1
 41943040
-8
+9
 VLogExportPersister 15 Begin_Of_Object
 7
 1416
@@ -5333,7 +5473,7 @@ VLogCfgData 15 Begin_Of_Object
 0
 3
 0
-218
+268
 1
 1
 0
@@ -5420,8 +5560,8 @@ End_Of_Object VLogCfgData 15
 1
 0
 1 12
-1 1 1 0 0 0 0 0 0 0 0 0 
-0 1 2 -1 -1 -1 -1 -1 -1 -1 -1 -1 
+1 1 1 1 0 0 0 0 0 0 0 0 
+0 1 2 3 -1 -1 -1 -1 -1 -1 -1 -1 
 26 25 246 179 55 55 55 55 57 57 82 30 
 500 80
 0
@@ -5606,7 +5746,7 @@ VLogCfgData 20 Begin_Of_Object
 0
 3
 1
-218
+268
 1
 1
 0
@@ -6064,7 +6204,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 121 144 1535 1044
+22 2 3 -32000 -32000 -1 -1 239 61 1653 961
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -8478,7 +8618,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-1 2 0 1 -1 -1 -1 -1 1043 0 1920 848
+1 0 0 1 -1 -1 -1 -1 1043 0 1920 848
 Database Management
 1
 
@@ -8490,7 +8630,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+0
 0
 0
 1
@@ -8501,7 +8641,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+0
 0
 0
 1
@@ -8512,7 +8652,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+0
 0
 0
 1
@@ -9059,7 +9199,7 @@ _size
 1
 Int32
 _version
-292
+312
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -9312,7 +9452,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-218
+268
 1
 1
 0
@@ -9931,7 +10071,7 @@ VUniqueBox 5 Begin_Of_Object
 VBoxRoot 6 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 799 405 1589 742
+1 2 0 1 -1 -1 -1 -1 168 316 886 653
 Offline Mode
 1
 
@@ -9939,11 +10079,11 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 799 405 1589 742
+0 1 -1 -1 -1 -1 168 316 886 653
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+2
 0
 0
 1
@@ -9954,7 +10094,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+2
 0
 0
 0
@@ -9965,7 +10105,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+2
 0
 0
 0
