Added motion module (MTN) into DD domain. renamed interface files according to naming convertion

--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -23,10 +23,10 @@ idf_component_register(SRCS "Config/dd_icm-20600_Cfg.c"
                             "Core/dd_xr-18910.c"
                             "Core/dd_i2c.c"
                             "Core/dd_sd.c"
-                            "Interface/dd_icm-20600_interface.c"
-                            "Interface/dd_max-30102_interface.c"
-                            "Interface/dd_xr-18910_interface.c"
-                            "Interface/dd_sd_interface.c"
+                            "Interface/dd_icm-20600_if.c"
+                            "Interface/dd_max-30102_if.c"
+                            "Interface/dd_xr-18910_if.c"
+                            "Interface/dd_sd_if.c"
                             "DD.c"
                        INCLUDE_DIRS "."
                        REQUIRES fatfs)
