--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -23,6 +23,7 @@ idf_component_register(SRCS "Config/dd_icm-20600_Cfg.c"
                             "Core/dd_xr-18910.c"
                             "Core/dd_i2c.c"
                             "Core/dd_sd.c"
+                            "Interface/dd_i2c_if.c"
                             "Interface/dd_icm-20600_if.c"
                             "Interface/dd_max-30102_if.c"
                             "Interface/dd_xr-18910_if.c"
