[OS] Renamed domain, updated build files and added os_time

--- a/010_Main_Application/CMakeLists.txt
+++ b/010_Main_Application/CMakeLists.txt
@@ -17,7 +17,8 @@ cmake_minimum_required(VERSION 3.5)
 
 
 # Set custom component directories
-set(EXTRA_COMPONENT_DIRS "DLG"
+set(EXTRA_COMPONENT_DIRS "OS" 
+                         "DLG"
                          "TS"
                          "DD"
                          "SENSE"
