--- a/010_Main_Application/.project
+++ b/010_Main_Application/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>smart_vibrator</name>
+	<name>sv-software</name>
 	<comment></comment>
 	<projects>
 	</projects>
